<resources>
    <!--activity_main-->
    <string name="app_name">더 편한 여행</string>
    <string name="look_clause">약관보기</string>
    <string name="clause"></string>
    <string name="assent">약관동의</string>
    <!--operate_detail_data-->
    <string name="geust_num">탑승인원</string>
    <string name="bus_type">차랑종류</string>
    <string name="date">출발일시</string>
    <string name="start_point">출발지</string>
    <string name="middle_point">경유지</string>
    <string name="arrive_point">도착지</string>
    <string name="pay">결제</string>
    <string name="phone_num">연락처</string>
    <string name="close">닫기</string>
    <string name="driver_name">기사명</string>
    <!--afil_com_info-->
    <!--afil_com_request-->
    <string name="service_name">상호명/서비스명</string>
    <string name="phone_num2">전화번호</string>
    <string name="introduce">소개</string>
    <string name="product_info">제품정보</string>
    <string name="map">지도</string>
    <string name="good">좋아요</string>
    <string name="uproad">사진업로드</string>
    <string name="request">신청</string>
    <!--car_mng_reg-->
    <string name="start_point2">출발장소</string>
    <string name="start_time">출발시간</string>
    <string name="arrive_time">도착시간</string>
    <string name="distance_in_service">운행거리</string>
    <string name="register">등록</string>
    <!--driver_state_set-->
    <string name="work_state">작업상태</string>
    <!--plus_info-->
    <string name="profile">프로필</string>
    <string name="notice">공지사항</string>
    <string name="car_mng">차량관리</string>
    <string name="state_reg">상태등록</string>
    <string name="set">설정</string>
    <string name="job">구인</string>
    <string name="look_job">구직</string>
    <string name="friend_invite">친구초대</string>
    <string name="final_point">도착지</string>

</resources>
