<?xml version="1.0" encoding="utf-8"?>
<!-- 9P_2 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">
    <ImageView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="3dp"/>
    <TextView
        android:id="@+id/service_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_name"
        android:layout_below="@id/picture"/>
    <TextView
        android:id="@+id/phone_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_num2"
        android:layout_below="@id/service_name"/>
    <TextView
        android:id="@+id/introduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduce"
        android:layout_below="@id/phone_num2" />
    <TextView
        android:id="@+id/introduce_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/border"
        android:layout_below="@id/introduce"
        android:layout_margin="3dp"/>
    <TextView
        android:id="@+id/product_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_info"
        android:layout_below="@id/introduce_input"/>
    <TextView
        android:id="@+id/product_info_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/border"
        android:layout_below="@id/product_info"
        android:layout_margin="3dp"/>
    <TextView
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"
        android:layout_below="@id/product_info_input"/>
    <ImageView
        android:id="@+id/map_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/border"
        android:layout_below="@id/map"
        android:layout_margin="3dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/map_input">
        <TextView
            android:id="@+id/goods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good"
            android:layout_centerVertical="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/good"
            />
    </RelativeLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>