<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <TextView
        android:id="@+id/geust_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="7.5dp"
        android:paddingBottom="7.5dp"
        android:paddingRight="20dp"
        android:text="@string/geust_num"
        android:textSize="25dp"/>
    <TextView
        android:id="@+id/bus_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="7.5dp"
        android:paddingBottom="7.5dp"
        android:text="@string/bus_type"
        android:textSize="25dp"
        android:layout_below="@id/geust_num"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="7.5dp"
        android:paddingBottom="7.5dp"
        android:text="@string/date"
        android:textSize="25dp"
        android:layout_below="@id/bus_type"/>
    <TextView
        android:id="@+id/start_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="7.5dp"
        android:paddingBottom="7.5dp"
        android:text="@string/start_point"
        android:textSize="25dp"
        android:layout_below="@id/date"/>
    <TextView
        android:id="@+id/middle_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="7.5dp"
        android:paddingBottom="7.5dp"
        android:text="@string/middle_point"
        android:textSize="25dp"
        android:layout_below="@id/start_point"/>
    <TextView
        android:id="@+id/final_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="7.5dp"
        android:paddingBottom="7.5dp"
        android:text="@string/arrive_point"
        android:textSize="25dp"
        android:layout_below="@id/middle_point"/>
    <TextView
        android:id="@+id/pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="7.5dp"
        android:paddingBottom="7.5dp"
        android:text="@string/pay"
        android:textSize="25dp"
        android:layout_below="@id/final_point"/>
    <TextView
        android:id="@+id/phone_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="7.5dp"
        android:paddingBottom="7.5dp"
        android:text="@string/phone_num"
        android:textSize="25dp"
        android:layout_below="@id/pay"/>
    <EditText
        android:id="@+id/geust_num_input"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/geust_num"
        android:layout_alignTop="@id/geust_num"
        android:layout_alignBottom="@id/geust_num"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:background="@drawable/border"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/bus_type"
        android:layout_alignTop="@id/bus_type"
        android:layout_alignBottom="@id/bus_type"
        android:layout_alignLeft="@id/geust_num_input"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:background="@drawable/border"
        />
    <EditText
        android:id="@+id/date_input"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/date"
        android:layout_alignTop="@id/date"
        android:layout_alignBottom="@id/date"
        android:layout_alignLeft="@id/geust_num_input"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:background="@drawable/border"
        />
    <EditText
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/date_input"
        android:layout_alignTop="@id/date"
        android:layout_alignBottom="@id/date"
        android:layout_margin="7dp"
        android:background="@drawable/border"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/start_point"
        android:layout_alignTop="@id/start_point"
        android:layout_alignBottom="@id/start_point"
        android:layout_alignLeft="@id/geust_num_input"
        android:layout_alignRight="@id/date_input"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:background="@drawable/border" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/middle_point"
        android:layout_alignTop="@id/middle_point"
        android:layout_alignBottom="@id/middle_point"
        android:layout_alignLeft="@id/geust_num_input"
        android:layout_alignRight="@id/date_input"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:background="@drawable/border"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/final_point"
        android:layout_alignTop="@id/final_point"
        android:layout_alignBottom="@id/final_point"
        android:layout_alignLeft="@id/geust_num_input"
        android:layout_alignRight="@id/date_input"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:background="@drawable/border"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/pay"
        android:layout_alignTop="@id/pay"
        android:layout_alignBottom="@id/pay"
        android:layout_alignLeft="@id/geust_num_input"
        android:layout_alignRight="@id/date_input"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:background="@drawable/border"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/phone_num"
        android:layout_alignTop="@id/phone_num"
        android:layout_alignBottom="@id/phone_num"
        android:layout_alignLeft="@id/geust_num_input"
        android:layout_alignRight="@id/date_input"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:background="@drawable/border"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_num"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="닫기"
        android:onClick="close"
        android:id="@+id/close"/>
</RelativeLayout>

