<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activity.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/name"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:text="@string/driver_name"
        android:textSize="20dp"
        android:textStyle="bold"
        android:background="@drawable/border"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/phoneNum"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:layout_below="@id/name"
        android:layout_alignRight="@id/name"
        android:layout_alignLeft="@id/name"
        android:text="전화번호"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/border"
        />
    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:layout_alignTop="@id/name"
        android:layout_alignBottom="@id/name"
        android:layout_toRightOf="@id/name"
        android:layout_marginLeft="30dp"
        android:background="@drawable/border_2"
        android:maxLength="4"
        android:textSize="12pt"
        android:singleLine="true"/>
    <TextView
        android:id="@+id/phoneNum_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:layout_below="@id/name_input"
        android:layout_toRightOf="@id/phoneNum"
        android:layout_alignTop="@id/phoneNum"
        android:layout_alignBottom="@id/phoneNum"
        android:layout_alignLeft="@id/name_input"
        android:background="@drawable/border3"
        android:maxLength="15"
        android:gravity="center"
        android:singleLine="true"
        />
    <TextView
        android:id="@+id/look_cus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/look_clause"
        android:textSize="15dp"
        android:layout_marginTop="10sp"
        android:layout_alignLeft="@id/phoneNum"
        android:layout_below="@id/phoneNum"
        />
    <ListView
        android:id="@+id/cus"
        android:layout_width="wrap_content"
        android:layout_height="120pt"
        android:layout_marginTop="10sp"
        android:layout_alignLeft="@id/phoneNum"
        android:layout_alignRight="@id/phoneNum_input"
        android:layout_below="@id/look_cus"
        />
    <CheckBox
        android:id="@+id/cuscheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cus"
        android:layout_alignRight="@id/cus"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/cuscheck"
        android:layout_below="@id/cus"
        android:layout_marginTop="7dp"
        android:paddingRight="10dp"
        android:id="@+id/agree"
        android:text="@string/assent"
        android:textSize="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/agree"
        android:layout_centerHorizontal="true"
        android:text="가입"
        android:id="@+id/checkok"
        android:onClick="checkok"/>
</RelativeLayout>